src/test/deca/syntax/invalid/test_synt/control_structures/while_decl_inside.deca
// Description:
//    Declaration dune variable dans un while.
//    Ca ne marche pas car toute variable doit etre decl avant linstruction
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: erreur de parse instruction ligne 15  
//
// Historique:
//    cree le 14/01/2022

{
    while(true) 
    {
        int condition = 1 ;
    }
}